nacos/deploy/nacos/nacos-ingress.yaml
# ------------------- App Ingress ------------------- #
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nacos-headless
  namespace: default

spec:
  ingressClassName: nginx
  rules:
  - host: nacos.demo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nacos-headless
            port:
              number: 8848
